--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "mock-server": "node src/api/mockServer.js"
+    "mock-server": "node src/api/mockServer.js",
+    "test": "mocha tests/unit.test.mjs"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -26,8 +27,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "chai": "^5.1.1",
+    "cypress": "^13.13.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "mocha": "^10.7.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
